source/ports/node_port/package/include/metacall/metacall_value.h

#	define boolean unsigned char
/* -- Enumerations -- */

enum metacall_value_id
{
	METACALL_BOOL	= 0,
	METACALL_CHAR	= 1,
	METACALL_SHORT	= 2,
	METACALL_INT	= 3,
	METACALL_LONG	= 4,
	METACALL_FLOAT	= 5,
	METACALL_DOUBLE	= 6,
	METACALL_STRING	= 7,
	METACALL_BUFFER	= 8,
	METACALL_ARRAY	= 9,
	METACALL_MAP	= 10,
	METACALL_PTR	= 11,
	METACALL_NULL	= 12,

	METACALL_SIZE,
	METACALL_INVALID
};
/**
*  @brief
*    Returns the size of the value
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Size in bytes of the value
*/
METACALL_API size_t metacall_value_size(void * v);
/**
*  @brief
*    Returns the amount of values this value contains
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Number of values @v represents
*/
METACALL_API size_t metacall_value_count(void * v);
/**
*  @brief
*    Provide type id of value
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Return type id assigned to value
*/
METACALL_API enum metacall_value_id metacall_value_id(void * v);
/**
*  @brief
*    Convert value @v to boolean
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to boolean
*/
METACALL_API boolean metacall_value_to_bool(void * v);
/**
*  @brief
*    Convert value @v to char
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to char
*/
METACALL_API char metacall_value_to_char(void * v);
/**
*  @brief
*    Convert value @v to short
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to short
*/
METACALL_API short metacall_value_to_short(void * v);
/**
*  @brief
*    Convert value @v to integer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to integer
*/
METACALL_API int metacall_value_to_int(void * v);
/**
*  @brief
*    Convert value @v to long integer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to long integer
*/
METACALL_API long metacall_value_to_long(void * v);
/**
*  @brief
*    Convert value @v to single precision floating point
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to float
*/
METACALL_API float metacall_value_to_float(void * v);
/**
*  @brief
*    Convert value @v to double precision floating point
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to dobule
*/
METACALL_API double metacall_value_to_double(void * v);
/**
*  @brief
*    Convert value @v to string
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to C string
*/
METACALL_API char * metacall_value_to_string(void * v);
/**
*  @brief
*    Convert value @v to buffer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to memory block
*/
METACALL_API void * metacall_value_to_buffer(void * v);
/**
*  @brief
*    Convert value @v to array of values
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to array of values
*/
METACALL_API void ** metacall_value_to_array(void * v);
/**
*  @brief
*    Convert value @v to map
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to map (array of tuples (array of values))
*/
METACALL_API void ** metacall_value_to_map(void * v);
/**
*  @brief
*    Convert value @v to pointer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to pointer
*/
METACALL_API void * metacall_value_to_ptr(void * v);
/**
*  @brief
*    Convert value @v to null
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to null
*/
METACALL_API void * metacall_value_to_null(void * v);
/**
*  @brief
*    Assign boolean @b to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] b
*    Boolean to be assigned to value @v
*
*  @return
*    Value with boolean @b assigned to it
*/
METACALL_API void * metacall_value_from_bool(void * v, boolean b);
/**
*  @brief
*    Assign character @c to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] c
*    Character to be assigned to value @v
*
*  @return
*    Value with char @c assigned to it
*/
METACALL_API void * metacall_value_from_char(void * v, char c);
/**
*  @brief
*    Assign short @s to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] s
*    Short to be assigned to value @v
*
*  @return
*    Value with short @s assigned to it
*/
METACALL_API void * metacall_value_from_short(void * v, short s);
/**
*  @brief
*    Assign integer @i to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] i
*    Integer to be assigned to value @v
*
*  @return
*    Value with integer @i assigned to it
*/
METACALL_API void * metacall_value_from_int(void * v, int i);
/**
*  @brief
*    Assign long integer @l to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] l
*    Long integer to be assigned to value @v
*
*  @return
*    Value with long @l assigned to it
*/
METACALL_API void * metacall_value_from_long(void * v, long l);
/**
*  @brief
*    Assign single precision floating point @f to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] f
*    Float to be assigned to value @v
*
*  @return
*    Value with float @f assigned to it
*/
METACALL_API void * metacall_value_from_float(void * v, float f);
/**
*  @brief
*    Assign double precision floating point @d to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] d
*    Double to be assigned to value @v
*
*  @return
*    Value with double @d assigned to it
*/
METACALL_API void * metacall_value_from_double(void * v, double d);
/**
*  @brief
*    Assign string @str to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] str
*    Constant string to be assigned to value @v
*
*  @param[in] length
*    Length of the constant string @str
*
*  @return
*    Value with string @str assigned to it
*/
METACALL_API void * metacall_value_from_string(void * v, const char * str, size_t length);